welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:7: error: not found: value defmMarquer
defmMarquer()
^Array1:27: error: not found: value marquer
		marquer();
                ^